manifests/memos/memos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels: { app: memos }
  template:
    metadata:
      labels: { app: memos }
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:0.26.0
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector: { app: memos }
  ports:
    - port: 5230
      targetPort: 5230
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos
  namespace: memos
spec:
  entryPoints: [ websecure ]
  routes:
    - match: Host(`memos.vault.REPLACE_ME_WITH_DOMAIN`)
      kind: Rule
      services:
        - name: memos
          port: 5230
  tls:
    secretName: memos-tls
